# ALSA_LIB_example

./: CMakeLists.txt  README.md
config/: chinese_audio_file.yaml  english_audio_file.yaml  language_config.yaml
inc/: asound_driver.hpp  audio_file_analyzer.hpp  audio_mixer_controller.hpp  audio_play_task_controller.hpp  audio_struct_define.h  main.hpp
src/: asound_driver.cpp  audio_file_analyzer.cpp  audio_mixer_controller.cpp  audio_play_task_controller.cpp  main.cpp
